--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,43 +27,63 @@ execute_process(COMMAND
         dbus/org.gnome.Nautilus.FileOperations2.xml
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
 
+execute_process(COMMAND
+        gdbus-codegen --c-namespace GD
+        --generate-c-code gd-sn-watcher-vo-gen.dbus
+        dbus/org.kde.StatusNotifierWatcher.xml
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+
+execute_process(COMMAND
+        gdbus-codegen --c-namespace GD
+        --generate-c-code gd-fd-notifications-gen.dbus
+        dbus/org.freedesktop.Notifications.xml
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
+
 file(GLOB DBUS_SRC *.dbus.h *.dbus.c)
 add_executable(graceful-DE2 main.c
         gd-wm.c gd-wm.h
         gd-session.c gd-session.h
         gd-ui-scaling.c gd-ui-scaling.h
         gd-application.c gd-application.h
+        gd-confirm-display-change-dialog.c gd-confirm-display-change-dialog.h
 
         backends/gd-monitor.c
+        backends/gd-settings.c
+        backends/gd-settings.h
         backends/gd-direction.h
+        backends/gd-edid-parse.c
+        backends/gd-edid-private.h
         backends/gd-display-config-shared.h
-        backends/gd-settings.c backends/gd-settings.h
-        backends/gd-edid-parse.c backends/gd-edid-private.h
+        backends/gd-monitor-config-store-private.h
+        backends/gd-monitor-config-manager-private.h
+        backends/gd-gpu-xrandr.c backends/gd-gpu-private.h
+        backends/gd-gpu-xrandr-private.h backends/gd-gpu.c
+        backends/gd-backend-x11.c backends/gd-backend-x11-private.h
         backends/gd-monitor-manager.c backends/gd-monitor-manager.h
         backends/gd-settings-private.h backends/gd-monitor-private.h
-        backends/gd-backend.c backends/gd-backend.h backends/gd-backend-private.h
-        backends/gd-crtc-xrandr.c backends/gd-crtc-xrandr-private.h backends/gd-crtc.c
-        backends/gd-rectangle.c backends/gd-rectangle.h backends/gd-rectangle-private.h
-        backends/gd-gpu-xrandr.c backends/gd-gpu-private.h backends/gd-gpu-xrandr-private.h backends/gd-gpu.c
-        backends/gd-backend-x11.c backends/gd-backend-x11-private.h backends/gd-backend-x11-cm.c backends/gd-backend-x11-cm-private.h
-        backends/gd-crtc-mode-info.c backends/gd-crtc-mode-info-private.h backends/gd-crtc-mode-private.h backends/gd-crtc-mode.c backends/gd-crtc-private.h
-        backends/gd-logical-monitor-config.c backends/gd-logical-monitor-config-private.h backends/gd-logical-monitor-private.h backends/gd-logical-monitor.c
-        backends/gd-monitor-config-manager-private.h backends/gd-monitor-config-manager.c backends/gd-monitor-config-private.h backends/gd-monitor-config-store-private.h
-        backends/gd-monitor-config-store.c
-        backends/gd-monitor-config-utils.h backends/gd-monitor-config.c backends/gd-monitor-config-utils.c
-        backends/gd-monitor-manager-enums-private.h backends/gd-monitor-manager-kms-private.h backends/gd-monitor-manager-kms.c
-        backends/gd-monitor-manager-private.h backends/gd-monitor-manager-types-private.h
-        backends/gd-monitor-manager-xrandr-private.h backends/gd-monitor-manager-xrandr.c
-        backends/gd-monitor-normal-private.h backends/gd-monitor-normal.c
         backends/gd-monitor-spec-private.h backends/gd-monitor-spec.c
         backends/gd-monitor-tiled-private.h backends/gd-monitor-tiled.c
         backends/gd-monitor-transform.h backends/gd-monitor-transform.c
-        backends/gd-orientation-manager-private.h backends/gd-orientation-manager.c
-        backends/gd-output-info-private.h backends/gd-output-info.c backends/gd-output-private.h
-        backends/gd-output-xrandr-private.h backends/gd-output-xrandr.c backends/gd-output.c
+        backends/gd-monitor-config-store.c backends/gd-monitor-config.c
+        backends/gd-backend-x11-cm.c backends/gd-backend-x11-cm-private.h
+        backends/gd-monitor-normal-private.h backends/gd-monitor-normal.c
+        backends/gd-crtc-mode-info.c backends/gd-crtc-mode-info-private.h
         backends/gd-monitors-config-private.h backends/gd-monitors-config.c
         backends/gd-dbus-display-config.h backends/gd-dbus-display-config.c
-        gd-confirm-display-change-dialog.h gd-confirm-display-change-dialog.c
+        backends/gd-logical-monitor-private.h backends/gd-logical-monitor.c
+        backends/gd-monitor-config-utils.h backends/gd-monitor-config-utils.c
+        backends/gd-monitor-config-manager.c backends/gd-monitor-config-private.h
+        backends/gd-backend.c backends/gd-backend.h backends/gd-backend-private.h
+        backends/gd-orientation-manager-private.h backends/gd-orientation-manager.c
+        backends/gd-crtc-xrandr.c backends/gd-crtc-xrandr-private.h backends/gd-crtc.c
+        backends/gd-rectangle.c backends/gd-rectangle.h backends/gd-rectangle-private.h
+        backends/gd-logical-monitor-config.c backends/gd-logical-monitor-config-private.h
+        backends/gd-monitor-manager-private.h backends/gd-monitor-manager-types-private.h
+        backends/gd-monitor-manager-xrandr-private.h backends/gd-monitor-manager-xrandr.c
+        backends/gd-crtc-mode-private.h backends/gd-crtc-mode.c backends/gd-crtc-private.h
+        backends/gd-output-xrandr-private.h backends/gd-output-xrandr.c backends/gd-output.c
+        backends/gd-monitor-manager-enums-private.h backends/gd-monitor-manager-kms-private.h backends/gd-monitor-manager-kms.c
+        backends/gd-output-info-private.h backends/gd-output-info.c backends/gd-output-private.h
 
         plugins/common/gd-bg.h plugins/common/gd-bg.c
         plugins/common/gd-keybindings.h plugins/common/gd-keybindings.c
@@ -86,6 +106,17 @@ add_executable(graceful-DE2 main.c
         plugins/desktop/gd-thumbnail-factory.h plugins/desktop/gd-thumbnail-factory.c
         plugins/desktop/gd-desktop-enum-types.h plugins/desktop/gd-desktop-enum-types.c
         plugins/desktop/gd-create-folder-dialog.h plugins/desktop/gd-create-folder-dialog.c
+
+        plugins/notifications/nd-queue.h plugins/notifications/nd-queue.c
+        plugins/notifications/nd-stack.h plugins/notifications/nd-stack.c
+        plugins/notifications/gd-bubble.h plugins/notifications/gd-bubble.c
+        plugins/notifications/nd-daemon.h plugins/notifications/nd-daemon.c
+        plugins/notifications/nd-notification.h plugins/notifications/nd-notification.c
+        plugins/notifications/gd-notifications.h plugins/notifications/gd-notifications.c
+        plugins/notifications/nd-notification-box.h plugins/notifications/nd-notification-box.c
+
+        plugins/status-notify-watcher/gd-sn-watcher-v0.h plugins/status-notify-watcher/gd-sn-watcher-v0.c
+        plugins/status-notify-watcher/gd-status-notifier-watcher.h plugins/status-notify-watcher/gd-status-notifier-watcher.c
 
         ${DBUS_SRC}
 )
