--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,13 @@
 execute_process(COMMAND
-        gdbus-codegen --c-namespace GD --generate-c-code
-        gd-session-manager-gen.dbus dbus/org.graceful.SessionManager.xml
+        gdbus-codegen --c-namespace GD
+        --generate-c-code gd-session-manager-gen.dbus
+        dbus/org.graceful.SessionManager.xml
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
 
 execute_process(COMMAND
-        gdbus-codegen --c-namespace GD --generate-c-code
-        gd-sm-client-private-gen.dbus dbus/org.graceful.SessionManager:ClientPrivate.xml
+        gdbus-codegen --c-namespace GD
+        --generate-c-code gd-sm-client-private-gen.dbus
+        dbus/org.graceful.SessionManager:ClientPrivate.xml
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src)
 
 execute_process(COMMAND
