--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,6 +138,8 @@ add_executable(graceful-DE2 main.c
 
         plugins/background/gd-root-background.h plugins/background/gd-root-background.c
 
+        plugins/panel/main-panel.h plugins/panel/main-panel.c
+
         plugins/status-notify-watcher/gd-sn-watcher-v0.h plugins/status-notify-watcher/gd-sn-watcher-v0.c
         plugins/status-notify-watcher/gd-status-notifier-watcher.h plugins/status-notify-watcher/gd-status-notifier-watcher.c
 
